@@ -1,3 +1,7 @@
+- disabled support for "none" alg tokens introduced with 1.5.2 by default.
+  If you want to enable it, you will now have to explicitly set the accept_none_alg
+  option to true.
+
 04/19/2018
 - added support for passing bearer token as cookie
 - added support introspection interval
